--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="col-sm-6 brand">  
              <div class="success-msg">
                 <p>Great! You have successfully created your Profile</p>
-                <a href="https://www.youtube.com/channel/UCc5GjlNTdSV4ZZCsX61mccg"
+                <a href="https://nasirrasheed.github.io/Myportfollio.pk/"
                  class="profile">Click For My Profile</a>
              </div>
           </div>
