--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title> Login/Sign In | PRAROZ</title>
+  <title> Login/Sign In | PORTFOLLIO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
